--- a/recipes/readline/all/conandata.yml
+++ b/recipes/readline/all/conandata.yml
@@ -9,5 +9,5 @@ patches:
   "8.1.2":
     - patch_file: "patches/0001-support-windows-msvc.patch"
       base_path: "source_subfolder"
-    - patch_file: "patches/0002-Add-a-config.h-that-works-on-windows-it-builds-No-cl.patch"
+    - patch_file: "patches/0002-cmakelist-and-win32-config.h.patch"
       base_path: "source_subfolder"
