--- a/recipes/ruby/all/test_package/CMakeLists.txt
+++ b/recipes/ruby/all/test_package/CMakeLists.txt
@@ -5,6 +5,9 @@ find_package(Ruby REQUIRED)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} Ruby::Ruby)
+if (RUBY_STATIC_RUBY)
+  target_compile_definitions(${PROJECT_NAME} PRIVATE RUBY_STATIC_RUBY)
+endif()
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_CURRENT_BINARY_DIR}/bin)
