--- a/recipes/ruby/all/test_package/CMakeLists.txt
+++ b/recipes/ruby/all/test_package/CMakeLists.txt
@@ -1,9 +1,16 @@
 cmake_minimum_required(VERSION 3.1)
-project(test_package)
+project(test_package CXX)
 
 find_package(Ruby REQUIRED)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
+set_target_properties(${PROJECT_NAME}
+    PROPERTIES
+        CXX_STANDARD 11
+        CXX_STANDARD_REQUIRED ON
+        CXX_EXTENSIONS OFF
+)
+
 target_link_libraries(${PROJECT_NAME} Ruby::Ruby)
 if (RUBY_STATIC_RUBY)
   target_compile_definitions(${PROJECT_NAME} PRIVATE RUBY_STATIC_RUBY)
