--- a/recipes/ruby/all/conandata.yml
+++ b/recipes/ruby/all/conandata.yml
@@ -5,6 +5,10 @@ sources:
 patches:
   "3.1.0":
     - patch_file: "patches/0001-darwin-includedir.patch"
+      patch_type: "portability"
     - patch_file: "patches/0002-remove-fpic.patch"
-    - patch_file: "patches/0003-openssl-ext.patch"
+      patch_type: "portability"
+    - patch_file: "patches/0003-openssl-zlib-ext.patch"
+      patch_type: "conan"
     - patch_file: "patches/0004-windows-cflags.patch"
+      patch_type: "portability"
