--- a/recipes/ruby/all/conandata.yml
+++ b/recipes/ruby/all/conandata.yml
@@ -15,6 +15,10 @@ patches:
       patch_type: "conan"
     - patch_file: "patches/0004-windows-cflags-3.2.2.patch"
       patch_type: "portability"
+    - patch_file: "patches/makefile.in-3.2.2.patch"
+      patch_type: "portability"
+    - patch_file: "patches/openstudio_specific-3.2.2.patch"
+      patch_type: "portability"
   "3.1.0":
     - patch_file: "patches/0001-darwin-includedir-3.1.0.patch"
       patch_type: "portability"
@@ -23,4 +27,8 @@ patches:
     - patch_file: "patches/0003-openssl-zlib-ext-3.1.0.patch"
       patch_type: "conan"
     - patch_file: "patches/0004-windows-cflags-3.1.0.patch"
+      patch_type: "portability"
+    - patch_file: "patches/makefile.in-3.1.0.patch"
+      patch_type: "portability"
+    - patch_file: "patches/openstudio_specific-3.1.0.patch"
       patch_type: "portability"
