--- a/recipes/ruby/all/conandata.yml
+++ b/recipes/ruby/all/conandata.yml
@@ -11,21 +11,29 @@ sources:
 patches:
   "3.3.0":
     - patch_file: "patches/0001-darwin-includedir-3.2.2.patch"
+      patch_description: "Remove SDKROOT on macOS"
       patch_type: "portability"
     - patch_file: "patches/0002-remove-fpic-3.3.0.patch"
+      patch_description: "Remove hardcoded fPIC"
       patch_type: "portability"
     - patch_file: "patches/0003-openssl-zlib-ext-3.3.0.patch"
+      patch_description: "Handle naming of zlib and openssl"
       patch_type: "conan"
     - patch_file: "patches/0004-windows-cflags-3.2.2.patch"
+      patch_description: "Define cflags properly on windows"
       patch_type: "portability"
   "3.2.2":
     - patch_file: "patches/0001-darwin-includedir-3.2.2.patch"
+      patch_description: "Remove SDKROOT on macOS"
       patch_type: "portability"
     - patch_file: "patches/0002-remove-fpic-3.2.2.patch"
+      patch_description: "Remove hardcoded fPIC"
       patch_type: "portability"
     - patch_file: "patches/0003-openssl-zlib-ext-3.2.2.patch"
+      patch_description: "Handle naming of zlib and openssl"
       patch_type: "conan"
     - patch_file: "patches/0004-windows-cflags-3.2.2.patch"
+      patch_description: "Define cflags properly on windows"
       patch_type: "portability"
   "3.1.0":
     - patch_file: "patches/0001-darwin-includedir-3.1.0.patch"
