--- a/recipes/ruby/all/test_v1_package/CMakeLists.txt
+++ b/recipes/ruby/all/test_v1_package/CMakeLists.txt
@@ -24,3 +24,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEAS
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin)
+
+set(TEST_RB_ABS_PATH "${CMAKE_CURRENT_BINARY_DIR}/bin/test.rb")
+configure_file(../test_package/test.rb ${TEST_RB_ABS_PATH} COPYONLY)
+target_compile_definitions(${PROJECT_NAME} PRIVATE TEST_RB_ABS_PATH="${TEST_RB_ABS_PATH}")
